Updating Landing Page

--- a/TripTrove/Client/wwwroot/index.html
+++ b/TripTrove/Client/wwwroot/index.html
@@ -46,6 +46,8 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="js/scrollAnimations.js"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </body>
 
 </html>
